WIP: more unicode issue

--- a/src/uu/more/Cargo.toml
+++ b/src/uu/more/Cargo.toml
@@ -20,6 +20,8 @@ uucore = { version = ">=0.0.7", package = "uucore", path = "../../uucore" }
 uucore_procs = { version = ">=0.0.5", package = "uucore_procs", path = "../../uucore_procs" }
 crossterm = ">=0.19"
 atty = "0.2.14"
+unicode-width = "0.1.7"
+unicode-segmentation = "1.7.1"
 
 [target.'cfg(target_os = "redox")'.dependencies]
 redox_termios = "0.1"
